bosskube_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bosskube-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - localhost
    secretName: localhost-staging-certificate
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: bosskube-service
          servicePort: 80
        path: /
